# webos

./: .gitignore  CONTRIBUTING.md  README.md  check_imports.py  debug_import.py  debug_ui.py  docker-compose.yml  openapi.json  persistence_test_output.txt  pyproject.toml  pytest.ini  run.py  run_loginspector.bat  settings.json  test_playwright.py  test_settings.py  test_ui_load.py  test_ui_routes.py
.nicegui/: storage-user-500c3f22-12cd-4a2a-a3c7-377e1f350d42.json
Docs/: backlog.md  roadmap.md
Docs/design/: architecture_design.md  design_doc.md  projec_notes.md
data/cache/: cache.db
des_docs/: backlog.md  gaps_and_implementation_plan.md  roadmap.md
des_docs/design/: architecture_design.md  auto_gui_sdk_proposal.md  data_explorer_implementation_detalization.md  design_doc.md  highcharts_migration_plan.md  implementation_plan_phase_2.md  implementation_plan_phase_3.md  module_settings_system.md
des_docs/knowledge/: final_retrospective.md  phase_8_technical_fixes.md
docs/: architecture.md  backlog.md  design.md  index.md  roadmap.md  roadmap_critique.md
docs/concepts/: architecture.md  auth_system.md  data_management.md  layout_system.md  module_system.md
docs/howto/: add_ui_component.md  add_ui_element.md  background_tasks.md  emit_events.md  file_ops.md  protect_route.md
docs/reference/: built_in_modules.md  core_api.md  dam_analysis.md  ui_framework.md
docs/tutorials/: core_concepts.md  create_module.md  getting_started.md  system_walkthrough.md
integrate/: smile wolf tager.md
samples/01_hello_kernel/: main.py
samples/02_task_manager/: main.py
scripts/: check_ui.py  check_ui_registration.py  demo_auth_flow.py  demo_env.py  demo_event_bus.py  demo_storage.py  output.txt  seed_demo.py  test_discovery.py  test_loading.py  test_tasks.py  verify_docs.py
src/: main.py
src/core/: auth.py  auth_ui.py  config.py  database.py  di.py  event_bus.py  exceptions.py  filters.py  hooks.py  kernel.py  logging.py  middleware.py  models.py  module.py  module_loader.py  permissions.py  registry.py  repository.py  schemas.py  seeding.py  service.py  storage.py  tasks.py
src/ui/: admin_registry.py  layout.py  registry.py  (+2 more)
(+119 files in other folders)
