[project]
name = "webos-engine"
version = "0.1.0"
description = "A modular, clean architecture based engine for Web OS applications."
authors = [{name = "Antigravity", email = "antigravity@google.com"}]
dependencies = [
    "pluggy>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "fastapi>=0.100.0",
    "beanie>=1.21.0",
    "motor>=3.3.0",
    "nicegui>=1.3.0",
    "taskiq>=0.9.0",
    "taskiq-redis>=0.4.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "import-linter>=1.11.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "mkdocs>=1.5.0",
    "mkdocstrings[python]>=0.23.0",
    "mongomock>=4.1.0",
    "mongomock-motor>=0.0.35",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"
